Finished Pipeline. YEAH. Received JSON  ist now converted to Scala object, afterwards parsed back to Json and sent via Kafka to node server. Minor bug fixes, just kidding, made the scala program more structured.

--- a/Dockerfiles/node/nodeapp/index.html
+++ b/Dockerfiles/node/nodeapp/index.html
@@ -15,7 +15,7 @@
     socket.on("test", function(value) {
         array.push(value);
         x++;
-        $("#output").text(value);
+        $("#output").text(JSON.stringify(value));
         console.log(array);
     });
 </script>
